package com.panda.study.designmodel.Decorator;

/**
 * Created by Administrator on 2019/7/30.
 */
public class ShortBlack extends Coffee{
    public ShortBlack(){
        setDes("shortBlack");
        setPrice(4.0f);
    }
}
