package com.panda.study.designmodel.Decorator;

/**
 * Created by Administrator on 2019/7/30.
 */
public class LongBlack extends Coffee{
    public LongBlack(){
        setDes("longBlack");
        setPrice(5.0f);
    }
}
